WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159533
REGRESSION (
r202918
): LayoutTest media/video-main-content-allow-then-deny.html is flaky, failing almost every time on El Capitan
https://bugs.webkit.org/show_bug.cgi?id=159533
Summary
REGRESSION (r202918): LayoutTest media/video-main-content-allow-then-deny.htm...
Ryan Haddad
Reported
2016-07-07 15:59:50 PDT
LayoutTest media/video-main-content-allow-then-deny.html failing
https://build.webkit.org/results/Apple%20El%20Capitan%20Release%20WK2%20(Tests)/r202936%20(7445)/results.html
--- /Volumes/Data/slave/elcapitan-release-tests-wk2/build/layout-test-results/media/video-main-content-allow-then-deny-expected.txt +++ /Volumes/Data/slave/elcapitan-release-tests-wk2/build/layout-test-results/media/video-main-content-allow-then-deny-actual.txt @@ -2,6 +2,6 @@ EVENT(canplaythrough) EVENT(playing) RUN(video.style.visibility = "hidden") -EVENT(pause) +FAIL: did not end fast enough END OF TEST
Attachments
Patch
(3.39 KB, patch)
2016-07-12 17:43 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryan Haddad
Comment 1
2016-07-07 16:02:29 PDT
Marked as failing in <
https://trac.webkit.org/r202941
>
Alexey Proskuryakov
Comment 2
2016-07-12 14:35:11 PDT
It fails almost every time on El Capitan, and it sometimes fails on Yosemite. Looks like a regression from <
http://trac.webkit.org/r202918
>. Jer, could you please take a look?
Jer Noble
Comment 3
2016-07-12 16:00:41 PDT
Sure thing.
Jer Noble
Comment 4
2016-07-12 17:23:47 PDT
This test will time out if a pause event is not fired within 500ms of hiding the <video> element. For a first pass, lets see if increasing this timeout to 1s doesn't fix this issue.
Jer Noble
Comment 5
2016-07-12 17:38:41 PDT
Nope, that's not the issue. The problem is that the MediaElementSession's m_isMainContent is (now) being modified outside the m_mainContentCheckTimer. Have a fix.
Jer Noble
Comment 6
2016-07-12 17:43:56 PDT
Created
attachment 283478
[details]
Patch
WebKit Commit Bot
Comment 7
2016-07-14 00:55:10 PDT
Comment on
attachment 283478
[details]
Patch Clearing flags on attachment: 283478 Committed
r203219
: <
http://trac.webkit.org/changeset/203219
>
WebKit Commit Bot
Comment 8
2016-07-14 00:55:14 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug