REGRESSION (r202918): LayoutTest media/video-main-content-allow-then-deny.html is flaky, failing almost every time on El Capitan https://bugs.webkit.org/show_bug.cgi?id=159533

Reviewed by Eric Carlson.

Source/WebCore:

Move the contents of mainContentCheckTimerFired() into updateIsMainContent() so that the
results of changing the m_isMainContent ivar are acted upon no matter why m_isMainContent
changes.

* html/MediaElementSession.cpp:
(WebCore::MediaElementSession::mainContentCheckTimerFired):
(WebCore::MediaElementSession::updateIsMainContent):

LayoutTests:

* platform/mac/TestExpectations:


Canonical link: https://commits.webkit.org/177909@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203219 268f45cc-cd09-0410-ab3c-d52691b4dbfc