Source/WebCore/html/MediaElementSession.cpp
@@ -604,16 +604,18 @@ void MediaElementSession::mainContentCheckTimerFired()
     if (!hasBehaviorRestriction(OverrideUserGestureRequirementForMainContent))
         return;
 
+    updateIsMainContent();
+}
+
+bool MediaElementSession::updateIsMainContent() const
+{
     bool wasMainContent = m_isMainContent;
     m_isMainContent = isMainContent(m_element);
 
     if (m_isMainContent != wasMainContent)
         m_element.updateShouldPlay();
-}
 
-bool MediaElementSession::updateIsMainContent() const
-{
-    return m_isMainContent = isMainContent(m_element);
+    return m_isMainContent;
 }
 
 }
